css fix menu z-index

--- a/app/sass/blocks/_header.sass
+++ b/app/sass/blocks/_header.sass
@@ -173,7 +173,7 @@
 		// transition: height 0.15s ease-out
 		overflow: hidden
 		position: absolute
-		z-index: 12
+		z-index: 9999
 		top: 100%
 		border-radius: 3px
 		left: 0
